/*

***********************************************************************************
* Copyright (C) 2018 - 2020, BlockSettle AB
* Distributed under the GNU Affero General Public License (AGPL v3)
* See LICENSE or http://www.gnu.org/licenses/agpl.html
*
**********************************************************************************

*/
syntax = "proto3";

package BlockSettle.Terminal;
import "common.proto";


message Empty {}


enum SettingIndex
{
   SetIdx_Initialized = 0;
   SetIdx_RunLocalArmory = 1;
   SetIdx_NetType = 2;
   SetIdx_ArmoryDbName = 3;
   SetIdx_ArmoryDbIP = 4;
   SetIdx_ArmoryDbPort = 5;
   SetIdx_ArmoryPathName = 6;
   SetIdx_Environment = 7;
   SetIdx_ChatServerPubKey = 8;
   SetIdx_ChatDbFile = 9;
   SetIdx_SavedUsername = 10;
   SetIdx_LocalSignerPort = 11;
   SetIdx_SignerIndex = 12;
   SetIdx_SignerOfflineDir = 13;
   SetIdx_AutoSignSpendLimit = 14;
   SetIdx_LaunchToTray = 15;
   SetIdx_MinimizeToTray = 16;
   SetIdx_CloseToTray = 17;
   SetIdx_NotifyOnTX = 18;
   SetIdx_DefaultAuthAddr = 19;
   SetIdx_NbAuthAddrsVisible = 20;
   SetIdx_LogDefault = 21;
   SetIdx_LogMessages = 22;
   SetIdx_TxCacheFileName = 23;
   SetIdx_NbBackupFilesKeep = 24;
   SetIdx_AQScripts = 25;
   SetIdx_LastAQScript = 26;
   SetIdx_DropQuoteNotif = 27;
   SetIdx_GUI_MainGeom = 28;
   SetIdx_GUI_MainTab = 29;
   SetIdx_Filter_MD_RFQ = 30;
   SetIdx_Filter_MD_RFQ_Portfolio = 31;
   SetIdx_Filter_MD_QN = 32;
   SetIdx_Filter_MD_QN_cnt = 33;
   SetIdx_ChangeLog_BaseURL = 34;
   SetIdx_Binaries_DownloadURL = 35;
   SetIdx_ResetPasswordURL = 36;
   SetIdx_GetAccount_ProdURL = 37;
   SetIdx_GetAccount_TestURL = 38;
   SetIdx_GetStartedGuideURL = 39;
   SetIdx_WalletFiltering = 40;
   SetIdx_Limit_FxRFQ = 41;
   SetIdx_Limit_XbtRFQ = 42;
   SetIdx_Limit_CcRFQ = 43;
   SetIdx_NoNotifyRFQ = 44;
   SetIdx_PriceUpdateInterval = 45;
   SetIdx_ShowQuoted = 46;
   SetIdx_AdvancedTXisDefault = 47;
   SetIdx_TxFilter = 48;
   SetIdx_SubscribeMDatStart = 49;
   SetIdx_MDLicenseAccepted = 50;
   SetIdx_AuthPrivKey = 51;
   SetIdx_jwtUsername = 52;
   SetIdx_LocalSignerPubKeyPath = 53;
   SetIdx_RemoteSigners = 54;
   SetIdx_RememberLogin = 55;
   SetIdx_ArmoryServers = 56;
   SetIdx_DefArmoryServerKeys = 57;
   SetIdx_TwoWaySignerAuth = 58;
   SetIdx_ChartProduct = 59;
   SetIdx_ChartTimeframe = 60;
   SetIdx_ChartCandleCount = 61;
   SetIdx_LastAQDir = 62;
   SetIdx_ProxyPubKey = 63;
   SetIdx_CCServerPubKey = 64;
   SetIdx_HideLegacyWalletWarn = 65;
   SetIdx_DetailedSettlDisalogByDef = 66;
   SetIdx_AutoStartRFQScript = 67;
   SetIdx_CurrentRFQScript = 68;
   SetIdx_ShowInfoWidget = 69;
   SetIdx_LoginApiKey = 70;
   SetIdx_AutoQuoting = 71;
   SetIdx_AutoSigning = 82;
//   SetIdx_ExtConnName = 73;
//   SetIdx_ExtConnHost = 74;
   SetIdx_ExtConnPort = 75;
   SetIdx_ExtConnPubKey = 76;
   SetIdx_SubmittedAddrXbtLimit = 77;
//   SetIdx_ExtConnOwnPubKey = 78;
}

enum SettingType
{
   SettingType_Unknown = 0;
   SettingType_String  = 1;
   SettingType_Int     = 2;
   SettingType_UInt    = 3;
   SettingType_UInt64  = 4;
   SettingType_Bool    = 5;
   SettingType_Float   = 6;
   SettingType_Rect    = 10;
   SettingType_Strings = 11;
   SettingType_StrMap  = 12;
}

enum SettingSource
{
   SettingSource_Unknown = 0;
   SettingSource_Local   = 1;
}

message SettingRequest
{
   SettingSource source = 1;
   SettingIndex  index  = 2;
   SettingType   type   = 3;
}

message StrKeyVal {
   string key   = 1;
   string value = 2;
}


message SettingResponse
{
   SettingRequest request = 1;

   message RectData {
      int32 left   = 1;
      int32 top    = 2;
      int32 width  = 3;
      int32 height = 4;
   }

   message Strings {
      repeated string strings = 1;
   }

   message StrMap {
      repeated StrKeyVal key_vals = 1;
   }

   oneof data
   {
      string s    = 2;
      int32  i    = 3;
      uint32 ui   = 4;
      uint64 ui64 = 5;
      bool   b    = 6;
      double f    = 7;
      RectData rect = 10;
      Strings  strings = 11;
      StrMap   key_vals = 12;
   }
}

message SettingsMessage
{
   message SettingsRequest
   {
      repeated SettingRequest requests = 1;
   }

   message SettingsResponse
   {
      repeated SettingResponse responses = 1;
   }

   message ArmoryServerSet
   {
      int32  network_type = 1;
      string server_name  = 2;
   }

   message SignerServer
   {
      string id = 1;
      string name = 2;
      bool   is_local = 3;
      int32  network_type = 4;
      string host = 5;
      string port = 6;
      string key = 7;
      string remote_keys_dir = 8;
      string remote_keys_file = 9;
      repeated StrKeyVal client_keys = 10;
      string local_port = 11;
      string home_dir = 12;
      double auto_sign_spend_limit = 13;
   }

   message SignerSetKey
   {
      string server_id = 1;
      string new_key = 2;
   }

   oneof data
   {
      SettingsRequest  get_request  = 1;
      SettingsResponse get_response = 2;
      SettingsResponse put_request = 3;
      SettingsResponse settings_updated = 4;
      ArmoryServerSet  armory_server = 5;
      Empty            signer_request = 6;
      SignerServer     signer_response = 7;
      SignerSetKey     signer_set_key = 8;
      Empty            signer_reset = 9;
   }
}


message AdministrativeMessage
{
   oneof data
   {
      Empty start = 1;
      Empty stop  = 2;
      Empty restart = 3;
      int32 component_created = 4;
      int32 component_loading = 5;
      int32 component_ready = 6;
   }
}


message BsServerMessage
{
   oneof data
   {
      Common.NewKeyCompare pub_new_key_request  = 10;
      bool    pub_new_key_response = 11;
   }
}


message MatchingMessage
{
   message LoggedIn
   {
      int32  user_type = 1;
      string user_id = 2;
      string user_name = 3;
   }

   oneof data
   {
      LoggedIn logged_in = 1;
      Empty    logged_out = 2;
      int32    connection_error = 3;
   }
}


message AssetsMessage
{
   oneof data
   {
      Empty placeholder = 1;
   }
}


message MktDataMessage
{
   oneof data
   {
      Empty accept_md_agreement = 1;
      Empty md_agreement_accepted = 2;
   }
}


message MDHistMessage
{
   oneof data
   {
      Empty placeholder = 1;
   }
}


message SettlementMessage
{
   oneof data
   {
      Empty placeholder = 1;
   }
}


message ChatMessage
{
   oneof data
   {
      Empty placeholder = 1;
   }
}
